# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("test") {
  testonly = true

  deps = [
    "fuzztest:fuzztest",
    "unittest:unittest",
  ]
}

ohos_executable("graphics_effect_exe") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "main.cpp" ]

  include_dirs = []

  deps = [ "//foundation/graphic/graphics_effect:graphics_effect_core" ]

  part_name = "graphics_effect"
  subsystem_name = "graphic"
}
