# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/graphic/graphics_effect/config.gni")

module_output_path = "graphics_effect/effect_process"

ohos_unittest("GraphicsEffectTest") {
  module_out_path = module_output_path

  sources = [
    "ge_aibar_shader_filter_test.cpp",
    "ge_grey_shader_filter_test.cpp",
    "ge_kawase_blur_shader_filter_test.cpp",
    "ge_linear_gradient_blur_shader_filter_test.cpp",
    "ge_magnifier_shader_filter_test.cpp",
    "ge_mesa_blur_shader_filter_test.cpp",
    "ge_render_test.cpp",
    "ge_system_properties_test.cpp",
    "ge_visual_effect_container_test.cpp",
    "ge_visual_effect_impl_test.cpp",
    "ge_visual_effect_test.cpp",
    "ge_water_ripple_filter_test.cpp",
    "gex_dot_matrix_shader_params_test.cpp",
    "gex_dot_matrix_shader_test.cpp",
    "gex_flow_light_sweep_shader_test.cpp",
  ]

  if (!is_mingw && !is_win) {
    sources += [ "ge_external_dynamic_loader_test.cpp" ]
  }

  include_dirs = [
    "$graphics_effect_root/include",
    "$graphics_effect_root/src",
  ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:2d_graphics",
    "graphics_effect:graphics_effect_core",
    "hilog:libhilog",
  ]

  part_name = "graphics_effect"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true
  deps = [ ":GraphicsEffectTest" ]
}
