# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/graphic/graphics_effect/config.gni")
module_out_path = "graphics_effect/effect_process"

##############################fuzztest##########################################
ohos_fuzztest("GEWaterRippleShaderFilterFuzzTest") {
  module_out_path = module_out_path
  fuzz_config_file =
      "$graphics_effect_root/test/fuzztest/gewaterrippleshaderfilter_fuzzer"

  include_dirs = [
    "$graphics_effect_root/src",
    "$graphics_effect_root/test/fuzztest/",
  ]

  sources = [
    "ge_water_ripple_filter_fuzzer.cpp",
    "get_object.h",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "graphic_2d:2d_graphics",
    "graphics_effect:graphics_effect_core",
  ]

  part_name = "graphics_effect"
  subsystem_name = "graphic"
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":GEWaterRippleShaderFilterFuzzTest" ]
}
###############################################################################
